# Doramas-AI-Technical-Assessment

./: README.md  ai_engineer_technical_assesment_1.ipynb  pyproject.toml
